--- a/install
+++ b/install
@@ -1,10 +1,9 @@
 :; cat > /dev/null << END_WIN
 :: Please read the LICENSE at the bottom of this file
+ECHO The current batch file is: %~0
 SET INSTALL_FILE="install_%RANDOM%-%RANDOM%.bat"
-curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o %INSTALL_FILE%
-CALL %INSTALL_FILE%
-DEL %INSTALL_FILE%
-exit /B 0
+curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o %INSTALL_FILE% && START %INSTALL_FILE%
+exit /B
 END_WIN
 
 INSTALL_FILE="install_$RANDOM-$RANDOM.sh"
