--- a/install
+++ b/install
@@ -1,17 +1,196 @@
 :; cat > /dev/null << END_WIN
 :: Please read the LICENSE at the bottom of this file
-ECHO The current batch file is: %~0
-SET INSTALL_FILE="install_%RANDOM%-%RANDOM%.bat"
-curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o %INSTALL_FILE% && START %INSTALL_FILE%
-exit /B
+::
+:: This is the Windows part of the installation script.
+::
+:: Check to see if we've been piped to CMD as is expected
+:: when first running. If so, download the script to disk
+:: and run it from there instead to avoid issues with cmd
+@ECHO OFF
+TIMEOUT /T 0 >NUL 2>NUL
+IF ERRORLEVEL 1 (SET INSTALL_FILE="%&TEMP%\install_%RANDOM%-%RANDOM%.cmd" && curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o %INSTALL_FILE% && START %INSTALL_FILE% && EXIT /B)
+
+SET INSTALL_TARGET=nomi-discord-python
+SET HOME_DIR=%USERPROFILE%
+
+:: Perform a basic sanity check
+IF NOT "%OS%" == "Windows_NT" (
+    ECHO "Windows NT is required"
+    
+)
+
+:: First, check for required dependencies. We need Docker for
+:: this project to run, so check we have that installed. If
+:: not, prompt the user to download it then re-run this script.
+:: Check if Docker is installed
+docker --version >NUL 2>&1
+IF ERRORLEVEL 1 (
+    ECHO Docker is required but not installed.
+    ECHO Please install Docker from the following URL:
+    ECHO https://www.docker.com/products/docker-desktop/
+    
+    SET /P OPEN_BROWSER="Would you like to open the Docker download page now? (Y/N): "
+    IF /I "%OPEN_BROWSER%"=="Y" (
+        START https://www.docker.com/products/docker-desktop/
+    ) ELSE (
+        ECHO Please install Docker and re-run the installer
+    )
+    GOTO cleanup
+)
+
+:: Check if tar is installed. It SHOULD be because it shipped
+:: with Windows before cURL, and this script is most likely
+:: running using cURL.
+tar --version >NUL 2>&1
+IF ERRORLEVEL 1 (
+    ECHO tar is required but not installed.
+    ECHO tar can be installed by installing Git for Windows, which provides tar and other Unix tools.
+    ECHO Please install Git from the following URL:
+    ECHO https://git-scm.com/download/win
+
+    SET /P OPEN_BROWSER="Would you like to open the Git for Windows download page now? (Y/N): "
+    IF /I "%OPEN_BROWSER%"=="Y" (
+        START https://git-scm.com/download/win
+    ) ELSE (
+        ECHO Please install tar and re-run the installer
+    )
+    GOTO cleanup
+)
+
+:: Now we know know we have Docker and tar we check with the user if
+:: installing in our default location (%USERPROFILE%\%INSTALL_TARGET%)
+:: is ok. If not, ask for an alternative.
+SET /P INSTALL_DIR="Enter installation directory (Press Enter for default: %USERPROFILE%\%INSTALL_TARGET%): "
+IF "%INSTALL_DIR%"=="" SET INSTALL_DIR=%USERPROFILE%\%INSTALL_TARGET%
+
+:: Create the folder if it doesn't exist.
+IF NOT EXIST "%INSTALL_DIR%" (
+    MKDIR "%INSTALL_DIR%"
+)
+
+:: Generate a random file name using the %RANDOM% environment variable
+SET TEST_FILE="%INSTALL_DIR%\test_%RANDOM%-%RANDOM%.txt"
+
+:: Check we have write access to the location the user has provided.
+:: We'll try to create a test file to check write access
+ECHO Testing write access > %TEST_FILE% 2>NUL
+IF ERRORLEVEL 1 (
+    ECHO It looks like we can't write to the folder: %INSTALL_DIR%.
+    ECHO Please make sure you have permission to write to this directory and try again.
+    GOTO cleanup
+)
+
+:: Delete the test file after the check
+DEL %TEST_FILE%
+
+:: Here we download the latest release from GitHub to INSTALL_TARGET
+ECHO Downloading the latest version from GitHub
+curl -L -o "%INSTALL_DIR%\latest.zip" https://github.com/toru173/nomi-discord-python/archive/refs/heads/main.zip
+
+IF NOT EXIST "%INSTALL_DIR%\latest.zip" (
+    ECHO Something went wrong during the download. Please try again.
+    GOTO cleanup
+)
+
+
+:: Warn the user that existing files will be overwritten. No going back now!
+ECHO WARNING: Extracting the archive will overwrite existing files in the directory: %INSTALL_DIR%.
+SET /P CONTINUE="Are you sure you want to proceed with the installation? (Y/N): "
+IF /I NOT "%CONTINUE%"=="Y" (
+    ECHO Extraction canceled. No changes were made.
+    GOTO cleanup
+)
+
+:: Proceed with unzipping the file using tar and overwrite existing files
+tar -xvf "%INSTALL_DIR%\latest.zip" -C "%INSTALL_DIR%" --overwrite >NUL
+IF ERRORLEVEL 1 (
+    ECHO Failed to unzip the file. Please try again.
+    GOTO cleanup
+)
+
+:: Check if the Nomi creation script exists (it should). Rename it to
+:: create_nomi.cmd to make running it from the command line easier later
+IF EXIST "%INSTALL_DIR%\create_nomi" (
+    REN "%INSTALL_DIR%\create_nomi" setup.cmd
+)
+
+:: Once everything unzipped we're good to go! Display a success message
+:: to the user and ask if they want to set up any Nomis now. If the
+:: user wants to set up a Nomi run the setup file in this directory
+:: for them
+IF EXIST "%INSTALL_DIR%\create_nomi.cmd" (
+    ECHO The installation completed succesfully.
+    SET /P RUN_SETUP="Do you want to create a Nomi now? (Y/N): "
+    IF /I "%RUN_SETUP%"=="Y" (
+        ECHO Creating a new Nomi
+        START "%INSTALL_DIR%\create_nomi.cmd"
+    ) ELSE (
+        ECHO Setup skipped. You can run it later by executing "%INSTALL_DIR%\setup.cmd".
+    )
+)
+
+:: All done! Let's exit from the Windows part of the script
+:cleanup
+:: Check if the script was  downloaded to temp. It most likely
+:: was as part of the install process, and if so it won't be
+:: named 'install.'
+IF NOT "%~nx0" == "install" (
+    DEL "%~f0"
+)
+:: Check if the install script exists (it should). Rename it to
+:: install.cmd to make running it from the command line easier later
+IF EXIST "%INSTALL_DIR%\install" (
+    REN "%INSTALL_DIR%\install" install.cmd
+)
+EXIT /B
+:: This is the end of the Windows component. After END_WIN we need
+:: to switch from Windows-style line endings (CRLF) to *nix/macos
+:: style line endings (LF). Labels don't work reliably when using
+:: LF only (https://www.dostips.com/forum/viewtopic.php?t=8988) and
+:: bash doesn't like CRLF (https://unix.stackexchange.com/questions/577663/handling-bash-script-with-crlf-carriage-return-in-linux-as-in-msys2)
 END_WIN
 
-INSTALL_FILE="install_$RANDOM-$RANDOM.sh"
-curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o $INSTALL_FILE
-chmod +x $INSTALL_FILE
-bash $INSTALL_FILE
-rm $INSTALL_FILE
-exit 0
+# This is the macOS/Linux part of the script. We have to do
+# The same steps here, but in a way that works for Bash. We
+
+INSTALL_TARGET=nomi-discord-python
+
+# Perform some basic sanity checks...
+if [ -z "${BASH_VERSION:-}" ]
+then
+   >&2 echo "Bash is required to interpret this script." 
+   cleanup 1
+fi
+
+echo "Running in Bash!"
+
+# Get the user's home directory. By default, we'll install into
+# a folder called "INSTALL_TARGET" in their home folder
+
+# First, check for required dependencies. We need Docker for
+# this project to run, so check we have that installed. If
+# not, prompt the user to download it then re-run this script.
+
+# Now we know know we have Docker we check with the user if
+# installing in our default location (~/$INSTALL_TARGET)
+# is ok. If not, ask for an alternative.
+
+# Check we have write access to the location the user has provided.
+# Create the folder if it doesn't exist.
+
+# Change directory to INSTALL_TARGET. Here we download the latest
+# release from GitHub then unzip it
+
+# Once it's unzipped we're good to go! Display a success message
+# to the user and ask if they want to set up any Nomis now. If the
+# user wants to set up a Nomi run the setup file in this directory
+# for them
+
+
+# All done! Let's exit from the macOS/Linux part of the script
+cleanup () {
+    exit $@
+}
 
 LICENSE
 
