--- a/install
+++ b/install
@@ -1,14 +1,13 @@
 :; cat > /dev/null << END_WIN
 :: Please read the LICENSE at the bottom of this file
-::
+@ECHO OFF
 :: This is the Windows part of the installation script.
 ::
 :: Check to see if we've been piped to CMD as is expected
 :: when first running. If so, download the script to disk
 :: and run it from there instead to avoid issues with cmd
-@ECHO OFF
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (SET INSTALL_FILE="%&TEMP%\install_%RANDOM%-%RANDOM%.cmd" && curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install_main -o %INSTALL_FILE% && START %INSTALL_FILE% && EXIT /B)
+IF ERRORLEVEL 1 (SET INSTALL_FILE="!TEMP!\install_!RANDOM!-!RANDOM!.cmd" && curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o !INSTALL_FILE! && START !INSTALL_FILE! && EXIT /B)
 
 SET INSTALL_TARGET=nomi-discord-python
 SET HOME_DIR=%USERPROFILE%
@@ -16,7 +15,7 @@ SET HOME_DIR=%USERPROFILE%
 :: Perform a basic sanity check
 IF NOT "%OS%" == "Windows_NT" (
     ECHO "Windows NT is required"
-    
+    GOTO cleanup
 )
 
 :: First, check for required dependencies. We need Docker for
@@ -135,6 +134,7 @@ IF EXIST "%INSTALL_DIR%\create_nomi.cmd" (
 :: was as part of the install process, and if so it won't be
 :: named 'install.'
 IF NOT "%~nx0" == "install" (
+    ECHO Script was run from "%~f0" 
     DEL "%~f0"
 )
 :: Check if the install script exists (it should). Rename it to
@@ -143,11 +143,6 @@ IF EXIST "%INSTALL_DIR%\install" (
     REN "%INSTALL_DIR%\install" install.cmd
 )
 EXIT /B
-:: This is the end of the Windows component. After END_WIN we need
-:: to switch from Windows-style line endings (CRLF) to *nix/macos
-:: style line endings (LF). Labels don't work reliably when using
-:: LF only (https://www.dostips.com/forum/viewtopic.php?t=8988) and
-:: bash doesn't like CRLF (https://unix.stackexchange.com/questions/577663/handling-bash-script-with-crlf-carriage-return-in-linux-as-in-msys2)
 END_WIN
 
 # This is the macOS/Linux part of the script. We have to do
@@ -158,7 +153,7 @@ INSTALL_TARGET=nomi-discord-python
 # Perform some basic sanity checks...
 if [ -z "${BASH_VERSION:-}" ]
 then
-   >&2 echo "Bash is required to interpret this script." 
+   >&2 echo "Bash is required to run this script." 
    cleanup 1
 fi
 
@@ -186,11 +181,8 @@ echo "Running in Bash!"
 # user wants to set up a Nomi run the setup file in this directory
 # for them
 
-
 # All done! Let's exit from the macOS/Linux part of the script
-cleanup () {
-    exit $@
-}
+exit 0
 
 LICENSE
 
