--- a/install
+++ b/install
@@ -1,13 +1,13 @@
 :; cat > /dev/null << END_WIN
 @ECHO OFF
-:: If this script is being run by using curl it will need to save
+:: If this script is being run using curl it will need to save
 :: itself to a temporary file. We do that here, and delete the
 :: temporary file to clean up once we're finished.
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\install_%RANDOM%-%RANDOM%.cmd"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /B /I CMD /C /D %TEMP_INSTALL_SCRIPT% && EXIT /B)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /B /I CMD /D /Q /C %TEMP_INSTALL_SCRIPT% && EXIT /B)
 ::
-:: The above is to if the scripte was piped to cmd.exe. This
+:: The above is to if the script was piped to cmd.exe. This
 :: is expected when first running. If so, download the script
 :: to disk and run it from there instead to avoid issues.
 :: We need to set a temporary install file path before
