--- a/install
+++ b/install
@@ -1,11 +1,10 @@
-:; cat > /dev/null << END_WIN
+: << END_WIN
 @ECHO OFF
 :: If this script is being run using curl it will need to save
-:: itself to a temporary file. We do that here, and delete the
-:: temporary file to clean up once we're finished.
-SET "TEMP_INSTALL_SCRIPT=%TEMP%\install_%RANDOM%-%RANDOM%.cmd"
-TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START "Install nomi-discord-python" /I CMD /D /Q /C %TEMP_INSTALL_SCRIPT% && EXIT /B)
+:: itself to a temporary file.
+@SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%.bat"
+@TIMEOUT /T 0 >NUL 2>NUL
+@IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /Q /K %TEMP_INSTALL_SCRIPT% >NUL 2>&1 & DEL %TEMP_INSTALL_SCRIPT% && EXIT /B)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
@@ -23,7 +22,7 @@ SET HOME_DIR=%USERPROFILE%
 :: Perform a basic sanity check
 IF NOT "%OS%" == "Windows_NT" (
     ECHO "Windows NT is required"
-    GOTO cleanup
+    EXIT /B
 )
 
 :: First, check for required dependencies. We need Docker for
@@ -42,7 +41,7 @@ IF ERRORLEVEL 1 (
     ) ELSE (
         ECHO Please install Docker and re-run the installer
     )
-    GOTO cleanup
+    EXIT /B
 )
 
 :: Check if tar is installed. It SHOULD be because it shipped
@@ -61,7 +60,7 @@ IF ERRORLEVEL 1 (
     ) ELSE (
         ECHO Please install tar and re-run the installer
     )
-    GOTO cleanup
+    EXIT /B
 )
 
 :: Now we know know we have Docker and tar we check with the user if
@@ -84,7 +83,7 @@ ECHO Testing write access > %TEST_FILE% 2>NUL
 IF ERRORLEVEL 1 (
     ECHO It looks like we can't write to the folder: %INSTALL_DIR%.
     ECHO Please make sure you have permission to write to this directory and try again.
-    GOTO cleanup
+    EXIT /B
 )
 
 :: Delete the test file after the check
@@ -96,7 +95,7 @@ curl -L -o "%INSTALL_DIR%\latest.zip" https://github.com/toru173/nomi-discord-py
 
 IF NOT EXIST "%INSTALL_DIR%\latest.zip" (
     ECHO Something went wrong during the download. Please try again.
-    GOTO cleanup
+    EXIT /B
 )
 
 
@@ -105,50 +104,38 @@ ECHO WARNING: Extracting the archive will overwrite existing files in the direct
 SET /P CONTINUE="Are you sure you want to proceed with the installation? (Y/N): "
 IF /I NOT "%CONTINUE%"=="Y" (
     ECHO Extraction canceled. No changes were made.
-    GOTO cleanup
+    EXIT /B
 )
 
 :: Proceed with unzipping the file using tar and overwrite existing files
 tar -xvf "%INSTALL_DIR%\latest.zip" -C "%INSTALL_DIR%" --overwrite >NUL
 IF ERRORLEVEL 1 (
     ECHO Failed to unzip the file. Please try again.
-    GOTO cleanup
+    EXIT /B
 )
 
 :: Check if the Nomi creation script exists (it should). Rename it to
-:: create_nomi.cmd to make running it from the command line easier later
+:: create_nomi.bat to make running it from the command line easier later
 IF EXIST "%INSTALL_DIR%\create_nomi" (
-    REN "%INSTALL_DIR%\create_nomi" create_nomi.cmd
+    REN "%INSTALL_DIR%\create_nomi" create_nomi.bat
 )
 
 :: Once everything unzipped we're good to go! Display a success message
 :: to the user and ask if they want to set up any Nomis now. If the
 :: user wants to set up a Nomi run the setup file in this directory
 :: for them
-IF EXIST "%INSTALL_DIR%\create_nomi.cmd" (
+IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
     ECHO The installation completed succesfully.
     SET /P RUN_SETUP="Do you want to create a Nomi now? (Y/N): "
     IF /I "%RUN_SETUP%"=="Y" (
         ECHO Creating a new Nomi
-        START "%INSTALL_DIR%\create_nomi.cmd"
+        START "%INSTALL_DIR%\create_nomi.bat"
     ) ELSE (
-        ECHO Creating a new Nomi was skipped. You can run it later by executing "%INSTALL_DIR%\create_nomi.cmd".
+        ECHO Creating a new Nomi was skipped. You can run it later by executing "%INSTALL_DIR%\create_nomi.bat".
     )
 )
 
 :: All done! Let's exit from the Windows part of the script
-:cleanup
-:: Check if the script was  downloaded to temp. It most likely
-:: was as part of the install process, and if so it won't be
-:: named 'install.'
-IF NOT "%~nx0" == "install" (
-    DEL "%~f0"
-)
-:: Check if the install script exists (it should). Rename it to
-:: install.cmd to make running it from the command line easier later
-IF EXIST "%INSTALL_DIR%\install" (
-    REN "%INSTALL_DIR%\install" install.cmd
-)
 EXIT /B
 END_WIN
 
