--- a/install
+++ b/install
@@ -113,9 +113,10 @@ IF /I NOT "%CONTINUE%" == "Y" (
 :: Proceed with unzipping the file using tar and overwrite existing files.
 :: GitHub wraps the whole repository in a folder so we have to traverse
 :: into that before before we can filter by the things we want to download.
-:: After that, get the install script, the license and everything inside /app
+:: After that, get the install script, the license and everything inside
+:: the 'app' subdirectory
 ECHO Extracting installation files...
-tar -xvf "%INSTALL_DIR%\install.zip" -C "%INSTALL_DIR%" --include='*/install, */app/*, */LICENSE'
+tar -xvf "%INSTALL_DIR%\install.zip" --include='*\install, *\LICENSE, *\app' --strip-components=1 -C "%INSTALL_DIR%" 
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
     GOTO cleanup
