--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /K %TEMP_INSTALL_SCRIPT% && DEL %TEMP_INSTALL_SCRIPT% & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /K %TEMP_INSTALL_SCRIPT% && DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
@@ -122,18 +122,19 @@ IF ERRORLEVEL 1 (
     GOTO cleanup
 )
 
-IF EXIST "%INSTALL_DIR%\install.zip" DEL "%INSTALL_DIR%\install.zip"
+IF EXIST "%INSTALL_DIR%\install.zip" DEL /F /Q "%INSTALL_DIR%\install.zip"
 
 :: Check if the install script exists (it should). Rename it to
 :: install.bat to make running it from the command line easier later
 IF EXIST "%INSTALL_DIR%\install" (
+    IF EXIST "%INSTALL_DIR%\install.bat" DEL /F /Q "%INSTALL_DIR%\install.bat"
     REN "%INSTALL_DIR%\install" "install.bat"
 )
 
 :: Check if the Nomi creation script exists (it should). Copy and rename it to
 :: create_nomi.bat to make running it from the command line easier later
 IF EXIST "%INSTALL_DIR%\app\create_nomi" (
-    XCOPY "%INSTALL_DIR%\app\create_nomi" "%INSTALL_DIR%\create_nomi.bat"
+    XCOPY /Y "%INSTALL_DIR%\app\create_nomi" "%INSTALL_DIR%\create_nomi.bat"
 )
 
 ECHO The installation completed succesfully.
@@ -148,7 +149,7 @@ IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
         ECHO Creating a new Nomi
         START "%INSTALL_DIR%\create_nomi.bat"
     ) ELSE (
-        ECHO Creating a new Nomi was skipped. You can run it later by running "%INSTALL_DIR%\create_nomi.bat".
+        ECHO Creating a new Nomi was skipped. You can run it later by running "create_nomi.bat" in the installation directory.
     )
 )
 
@@ -156,9 +157,10 @@ IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
 :cleanup
 :: In case we received an error between downloading and extracting
 :: the install files, delete them here
-IF EXIST "%INSTALL_DIR%\install.zip" DEL "%INSTALL_DIR%\install.zip"
+IF EXIST "%INSTALL_DIR%\install.zip" DEL /F /Q "%INSTALL_DIR%\install.zip"
 ENDLOCAL
 ECHO Please close this window to return to the previous command screen
+PAUSE
 EXIT /B
 END_WIN
 
