--- a/install
+++ b/install
@@ -1,10 +1,10 @@
 : << END_WIN
-:: @ECHO OFF
+@ECHO OFF
 :: If this script is being run using curl it will need to save
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /K %TEMP_INSTALL_SCRIPT% && DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /Q /K %TEMP_INSTALL_SCRIPT% && DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
@@ -41,7 +41,7 @@ IF ERRORLEVEL 1 (
     ) ELSE (
         ECHO Please install Docker and re-run the installer.
     )
-    @REM GOTO cleanup
+    GOTO cleanup
 )
 
 :: Check if tar is installed. It SHOULD be because it shipped
@@ -159,7 +159,6 @@ IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
 :: the install files, delete them here
 IF EXIST "%INSTALL_DIR%\install.zip" DEL /F /Q "%INSTALL_DIR%\install.zip"
 ENDLOCAL
-ECHO Please close this window to return to the previous command screen
 PAUSE
 EXIT /B
 END_WIN
