--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% && START /WAIT /I CMD /Q /K %TEMP_INSTALL_SCRIPT% && DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% --remove-on-error && START /B /WAIT /I CMD /Q /K %TEMP_INSTALL_SCRIPT% && DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
@@ -90,7 +90,7 @@ RMDIR "%WRITE_TEST%"
 
 :: Here we download the latest release from GitHub to INSTALL_FOLDER
 ECHO Downloading the latest version from GitHub...
-curl -sL https://github.com/toru173/nomi-discord-python/archive/refs/heads/main.zip > "%INSTALL_DIR%\install.zip"
+curl -sL https://github.com/toru173/nomi-discord-python/archive/refs/heads/main.zip -o "%INSTALL_DIR%\install.zip" --remove-on-error
 IF NOT EXIST "%INSTALL_DIR%\install.zip" (
     ECHO Something went wrong during the download. Please try again.
     GOTO cleanup
