--- a/install
+++ b/install
@@ -4,11 +4,15 @@
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% --remove-on-error && START /B /I CMD /K %TEMP_INSTALL_SCRIPT% & DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o %TEMP_INSTALL_SCRIPT% --remove-on-error && START /B /I CMD /K %TEMP_INSTALL_SCRIPT% & PING 192.0.2.0 -N 1 -W 5000 & DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
-:: when executing from a pipe. Thanks cmd.exe!
+:: when executing from a pipe. We also can't use a
+:: TIMEOUT because it behaves differently when being piped.
+:: We try to run it as a way to check that the script is
+:: running from a pipe, but then use ping with a timeout
+:: when we actually need to way (https://stackoverflow.com/a/735294)
 ::
 :: ============================================================================
 :: === The LICENSE for this script can be found at the bottom of this file ====
